RESOLVED FIXED59671
Race condition with scrollbar animations and closing a page can cause a crash in WebCore::FrameView::setVisibleScrollerThumbRect + 15
https://bugs.webkit.org/show_bug.cgi?id=59671
Summary Race condition with scrollbar animations and closing a page can cause a crash...
Beth Dakin
Reported 2011-04-27 21:17:59 PDT
I have not been able to catch it in a debugger, but there are numerous reports indicating a crash in WebCore::FrameView::setVisibleScrollerThumbRect(). Looks like we are de-referencing page. Patch forthcoming. <rdar://problem/9329253>
Attachments
Patch (2.11 KB, patch)
2011-04-27 21:21 PDT, Beth Dakin
mitz: review+
Beth Dakin
Comment 1 2011-04-27 21:21:15 PDT
Beth Dakin
Comment 2 2011-04-27 21:32:53 PDT
Thanks Dan! Committed fix with revision 85147.
Note You need to log in before you can comment on or make changes to this bug.