https://bugs.webkit.org/show_bug.cgi?id=59671 Race condition with scrollbar animations and closing a page can cause a crash in WebCore::FrameView::setVisibleScrollerThumbRect + 15 -and corresponding- <rdar://problem/9329253>

Reviewed by Dan Bernstein.

It is definitely possible for Page to be null here. So we should null-check it!
And we should not ASSERT.
* page/FrameView.cpp:
(WebCore::FrameView::didCompleteRubberBand):
(WebCore::FrameView::scrollbarStyleChanged):
(WebCore::FrameView::setVisibleScrollerThumbRect):



Canonical link: https://commits.webkit.org/74864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85147 268f45cc-cd09-0410-ab3c-d52691b4dbfc